Fix reverse column for web.de

--- a/index.html
+++ b/index.html
@@ -715,66 +715,52 @@
 
                             <!-- START of REVERSE TWO COLUMN LAYOUT -->
                             <tr>
-                                <td align="center" valign="top" style="padding: 0 24px 48px;">
-                                     <!--2 column - image right (reverse stack)-->
-                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
-                                          <tr>
-                                               <td align="center" valign="top" style="font-size:0;" dir="rtl">
-                                                <!--[if (gte mso 9)|(IE)]>
-                                                    <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="width: 100%;">
+                                <td align="left" style="padding: 0 24px 48px;">
+                                    <!--[if mso]><table dir="ltr" cellpadding="0" cellspacing="0"><tr><td><table dir="rtl" style="width:600px" cellpadding="0" cellspacing="0"><tr><td dir="ltr" style="width:264px" valign="top"><![endif]-->
+                                    <table cellpadding="0" cellspacing="0" class="w100p" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
+                                        <tr>
+                                            <td align="left" style="padding:0;Margin:0;width:264px">
+                                                
+                                                <img class="imgFull"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/0b314cfa-31b8-0058-ab12-e6c49a5b393a.jpg" alt="The Mediterranean" style="width: 100%;  display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;font-size:12px" width="298" title="The Mediterranean">
+                                                 
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <!--[if mso]></td><td dir="ltr" style="width:5px"></td><td dir="ltr" style="width:264px" valign="top"><![endif]-->
+                                    <table cellpadding="0" cellspacing="0" class="w100p" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
+                                        <tr>
+                                            <td align="left" style="padding:0;Margin:0;width:264px;">
+                                                <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                                     <tr>
-                                                    <td valign="top" style="width: 264px;">
-                                                <![endif]-->
-                                                    <div class="lPad-0" style="display:inline-block;vertical-align:top; padding-left: 24px;">
-                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width: 264px;">
-                                                              <tr>
-                                                                   <td align="center" valign="top">
-                                                                       <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/0b314cfa-31b8-0058-ab12-e6c49a5b393a.jpg" alt="Aussie coins" width="264" height="264" style="font-size: 18px; line-height: 28px; color: #0a080b;">
-                                                                   </td>
-                                                              </tr>
-                                                         </table>
-                                                    </div>
-                                                <!--[if (gte mso 9)|(IE)]>
-                                                    </td>
-                                                    <td valign="top" style="width:24px;"></td>
-                                                    <td valign="top" style="width:264px;">
-                                                <![endif]-->
-                                                    <div style="display:inline-block;vertical-align:top;">
-                                                         <table class="w100p" cellpadding="0" cellspacing="0" border="0" role="presentation" dir="ltr" style="width:264px;">
-                                                                <tr>
-                                                                    <td style="padding-top: 16px;">
-                                                                        <span  style="margin: 0; padding: 0; font-size: 12px; line-height: 16px; font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; letter-spacing: 3px; color: #D90429;">MONEY</span>
-                                                                    </td>
-                                                                </tr>
-                                                              <tr>
-                                                                   <td align="left" valign="top" style="padding: 8px 0;">
-                                                                        <!--H3 heading-->
-                                                                        <h3 style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 20px; line-height: 32px; color:#2B2D42; margin:0; padding:0; text-align: left;">Aussie falters on soft jobs data, kiwi calm after Ardern resignation</h3>
-                                                                   </td>
-                                                              </tr>
-                                                              <tr>
-                                                                   <td align="left" valign="top">
-                                                                        <!--Paragraph-->
-                                                                        <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Australian dollar reversed a recent rally on Thursday, as rising fears of a U.S. recession and...</p>
-                                                                   </td>
-                                                              </tr>
-                                                              <tr>
-                                                                <td style="padding-top: 8px;">
-                                                                    <a href="https://www.msn.com/en-us/money/markets/aussie-falters-on-soft-jobs-data-kiwi-calm-after-ardern-resignation/ar-AA16vl5v?cvid=f8d189244b0440a5b4d552012ccb69cd" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
-                                                                </td>
-                                                            </tr>
-                                                         </table>
-                                                    </div>
-                                                <!--[if (gte mso 9)|(IE)]>
-                                                    </td>
+                                                        <td style="padding-top: 16px;">
+                                                            <span  style="margin: 0; padding: 0; font-size: 12px; line-height: 16px; font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; letter-spacing: 3px; color: #D90429;">MONEY</span>
+                                                        </td>
                                                     </tr>
-                                                    </table>
-                                                <![endif]-->
-                                               </td>
-                                          </tr>
-                                     </table>
+                                                  <tr>
+                                                       <td align="left" valign="top" style="padding: 8px 0;">
+                                                            <!--H3 heading-->
+                                                            <h3 style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: bold; font-size: 20px; line-height: 32px; color:#2B2D42; margin:0; padding:0; text-align: left;">Aussie falters on soft jobs data, kiwi calm after Ardern resignation</h3>
+                                                       </td>
+                                                  </tr>
+                                                  <tr>
+                                                       <td align="left" valign="top">
+                                                            <!--Paragraph-->
+                                                            <p style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; color:#2B2D42; margin: 0; padding:0; text-align: left;">The Australian dollar reversed a recent rally on Thursday, as rising fears of a U.S. recession and...</p>
+                                                       </td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td style="padding-top: 8px;">
+                                                        <a href="https://www.msn.com/en-us/money/markets/aussie-falters-on-soft-jobs-data-kiwi-calm-after-ardern-resignation/ar-AA16vl5v?cvid=f8d189244b0440a5b4d552012ccb69cd" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                    </td>
+                                                </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <!--[if mso]></td></tr></table></td></tr></table><![endif]-->
                                 </td>
-                           </tr>
+                            </tr>
+                            <!-- END of REVERSE TWO COLUMN LAYOUT -->
 
                             <!-- START of TWO COLUMN LAYOUT -->
                             <tr>
