--- a/index.html
+++ b/index.html
@@ -716,7 +716,11 @@
                             <!-- START of REVERSE TWO COLUMN LAYOUT -->
                             <tr>
                                 <td align="left" style="padding: 0 24px 48px;">
-                                    <!--[if mso]><table dir="ltr" cellpadding="0" cellspacing="0"><tr><td><table dir="rtl" style="width:600px" cellpadding="0" cellspacing="0"><tr><td dir="ltr" style="width:264px" valign="top"><![endif]-->
+                                    <!--[if mso]>
+                                    <table dir="rtl" style="width:600px" cellpadding="0" cellspacing="0">
+                                        <tr>
+                                            <td dir="ltr" style="width:264px" valign="top">
+                                    <![endif]-->
                                     <table cellpadding="0" cellspacing="0" class="w100p" align="right" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
                                         <tr>
                                             <td align="left" style="padding:0;Margin:0;width:264px">
@@ -726,7 +730,10 @@
                                             </td>
                                         </tr>
                                     </table>
-                                    <!--[if mso]></td><td dir="ltr" style="width:5px"></td><td dir="ltr" style="width:264px" valign="top"><![endif]-->
+                                    <!--[if mso]>
+                                            </td>
+                                            <td dir="ltr" style="width:264px" valign="top">
+                                    <![endif]-->
                                     <table cellpadding="0" cellspacing="0" class="w100p" align="left" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
                                         <tr>
                                             <td align="left" style="padding:0;Margin:0;width:264px;">
@@ -757,7 +764,11 @@
                                             </td>
                                         </tr>
                                     </table>
-                                    <!--[if mso]></td></tr></table></td></tr></table><![endif]-->
+                                    <!--[if mso]>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <![endif]-->
                                 </td>
                             </tr>
                             <!-- END of REVERSE TWO COLUMN LAYOUT -->
