Add arrows to links

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td style="padding-top: 8px;">
-                                                                    <a href="https://www.goodnewsnetwork.org/crowd-gathers-for-rare-treat-of-seeing-snowy-owl-in-california/" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                    <a href="https://www.goodnewsnetwork.org/crowd-gathers-for-rare-treat-of-seeing-snowy-owl-in-california/" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More &rarr;</a>
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -625,7 +625,7 @@
                                                                 </tr>
                                                                 <tr>
                                                                     <td style="padding-top: 8px;">
-                                                                        <a href="https://www.today.com/news/good-news/teen-icy-iowa-lake-rescue-83-year-old-dog-trapped-jeep-rcna69666" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                        <a href="https://www.today.com/news/good-news/teen-icy-iowa-lake-rescue-83-year-old-dog-trapped-jeep-rcna69666" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More &rarr;</a>
                                                                     </td>
                                                                 </tr>
                                                             </table>
@@ -690,7 +690,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td style="padding-top: 8px;">
-                                                                <a href="https://gamerant.com/bungie-destiny-2-community-manager-account-twitter/" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More</a>
+                                                                <a href="https://gamerant.com/bungie-destiny-2-community-manager-account-twitter/" target="_blank" style="font-family:'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color:#D90429; margin:0; padding:0; text-align: left; text-decoration: underline;">Read More &rarr;</a>
                                                             </td>
                                                         </tr>
                                                         </table>
