Remove title att

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                         <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/884ec297-f225-9ab2-b0d4-a4ae1d9da161.png" width="186" alt="Daily Sentry Logo">
                                     </a>
                                     <a class="dark-img" href="http://example.com" target="_blank" style="display: none;">
-                                        <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/61d7f6b4-b16b-88ec-aeb3-edd5550b0162.png" width="186" alt="Daily Sentry Logo">
+                                        <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/61d7f6b4-b16b-88ec-aeb3-edd5550b0162.png" width="186" alt="Dark Daily Sentry Logo">
                                     </a>
                                 </td>
                             </tr>
@@ -596,7 +596,7 @@
                                                 <table class="w100p" align="right" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right; width: 264px;">
                                                     <tr>
                                                         <td align="left" style="padding:0; Margin:0; width:264px">
-                                                            <img class="imgFull"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/e5365b47-068f-051a-21de-df048f0546f0.jpg" alt="Jeep stuck in icy lake" style="width: 100%; display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;font-size:12px" width="264" height="264" title="The Mediterranean">
+                                                            <img class="imgFull"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/e5365b47-068f-051a-21de-df048f0546f0.jpg" alt="Jeep stuck in icy lake" style="width: 100%; display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;font-size:12px" width="264" height="264">
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -717,7 +717,7 @@
                                                     <img src="https://i.ibb.co/52n4Zmp/f-logo-light.png" width="140" alt="Daily Sentry Logo">
                                                 </a>
                                                 <a class="dark-img" href="http://example.com" target="_blank" style="display: none;">
-                                                    <img src="https://i.ibb.co/sP0NHNf/f-logo-dark.png" width="140" alt="Daily Sentry Logo">
+                                                    <img src="https://i.ibb.co/sP0NHNf/f-logo-dark.png" width="140" alt="Dark Daily Sentry Logo">
                                                 </a>
                                             </td>
                                         </tr>
