--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
             }
 
             /* Custom Dark Mode Background Color */
-            [data-ogsc] .darkmode  { background-color: #100E11 !important; }
-            [data-ogsc] .darkmode2 { background-color: #020203 !important; }
-            [data-ogsc] .darkmode3 { background-color: #222023 !important; }
+            [data-ogsc] .darkmode  { background-color: #03051A !important; }
+            [data-ogsc] .darkmode2 { background-color: #17192E !important; }
+            [data-ogsc] .darkmode3 { background-color: #2B2D42 !important; }
+            [data-ogsc] .darkmode-btn { background-color: #EDF2F4 !important; color: #17192E !important;}
 
             /* Custom Dark Mode Font Colors */
             [data-ogsc] h1, [data-ogsc] h3, [data-ogsc] p, [data-ogsc] span, [data-ogsc] a { color: #EDF2F4 !important; }
@@ -218,7 +219,6 @@
                 <tr>
                     <td class="tPad-0" align="center" valign="top" style="padding: 32px 0;">
                         <table class="w100p darkmode2" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:600px; background-color: #ffffff;">  
-
                             <!-- START of HEADER -->
                             <tr>
                                 <td align="left" height="88px" style="width: 552px; height: 88px; padding: 0 24px;">
@@ -738,7 +738,6 @@
                                 </td>
                             </tr>
                             <!-- END of FOOTER -->
-
                         </table>
                     </td>
                 </tr>
