--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <!-- START of MAIN ARTICLE -->
                             <tr>
                                 <td align="center" style="padding: 0 24px">
-                                    <img width="552"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/fe6a0da6-b4ca-4412-975e-cb55263bb8f9.jpg" alt="Jon Bernthal as Frank Castle AKA The Punisher" style="vertical-align: middle; width: 100%; max-width: 552px;">
+                                    <img  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/fe6a0da6-b4ca-4412-975e-cb55263bb8f9.jpg" alt="Jon Bernthal as Frank Castle AKA The Punisher" width="552" style="width: 100%; display: block;">
                                 </td>
                             </tr>
                             <tr>
@@ -302,7 +302,7 @@
                                                     <table class="w100p" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/fb5cba1d-34e3-818f-03cd-e1121f45a3c9.jpg" alt="2022 Toyota Tacoma" width="264" style="font-size: 16px;">
+                                                                <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/fb5cba1d-34e3-818f-03cd-e1121f45a3c9.jpg" alt="2022 Toyota Tacoma" width="264" style="width: 100%; display: block;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -349,7 +349,7 @@
                                                     <table class="w100p" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/66abce02-5d74-73ec-3ea9-d7def8b4421c.jpg" alt="Woman sitting on motorcycle with her German Shepherd" width="264" style="font-size: 16px;">
+                                                                <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/66abce02-5d74-73ec-3ea9-d7def8b4421c.jpg" alt="Woman sitting on motorcycle with her German Shepherd" width="264" style="width: 100%; display: block;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -414,7 +414,7 @@
                                                     <table class="w100p" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/3a57a639-61d2-2a26-5d9e-a50a932dcfb1.jpg" alt="Forspoken main character Alfre Frey Holland" width="264" style="font-size: 16px;">
+                                                                <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/3a57a639-61d2-2a26-5d9e-a50a932dcfb1.jpg" alt="Forspoken main character Alfre Frey Holland" width="264" style="width: 100%; display: block;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -461,7 +461,7 @@
                                                     <table class="w100p" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 264px;">
                                                         <tr>
                                                             <td align="center" valign="top">
-                                                                <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/b7881424-c1a9-5416-312c-96f3005d5473.jpg" alt="NBA player Matt Ryan staring at basket from free throw line" width="264" style="font-size: 16px;">
+                                                                <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/b7881424-c1a9-5416-312c-96f3005d5473.jpg" alt="NBA player Matt Ryan staring at basket from free throw line" width="264" style="width: 100%; display: block;">
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -534,7 +534,7 @@
                                                          <table class="w100p" border="0" cellpadding="0" cellspacing="0" role="presentation" dir="ltr" style="width: 264px;">
                                                               <tr>
                                                                    <td align="center" valign="top">
-                                                                        <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/165d6c9f-fdc2-28f3-540c-ae98b0309237.jpg" alt="Snowy owl perched on roof" width="264" height="264" style="font-size: 16px;">
+                                                                        <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/165d6c9f-fdc2-28f3-540c-ae98b0309237.jpg" alt="Snowy owl perched on roof" width="264" height="264" style="width: 100%; display: block;">
                                                                    </td>
                                                               </tr>
                                                          </table>
@@ -596,7 +596,7 @@
                                                 <table class="w100p" align="right" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right; width: 264px;">
                                                     <tr>
                                                         <td align="left" style="padding:0; Margin:0; width:264px">
-                                                            <img class="imgFull"  src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/e5365b47-068f-051a-21de-df048f0546f0.jpg" alt="Jeep stuck in icy lake" style="width: 100%; display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;font-size:12px" width="264" height="264">
+                                                            <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/e5365b47-068f-051a-21de-df048f0546f0.jpg" alt="Jeep stuck in icy lake" width="264" height="264" style="width: 100%; display: block;">
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -659,7 +659,7 @@
                                                         <table class="w100p" border="0" cellpadding="0" cellspacing="0"role="presentation" dir="ltr" style="width: 264px;">
                                                             <tr>
                                                                 <td align="center" valign="top">
-                                                                    <img class="imgFull" src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/7d398fa8-461e-bcb1-9654-f24a2e15364e.jpg" alt="Destny 2 titan, warlock, and hunter posing" width="264" height="264" style="font-size: 16px; line-height: 24px; color: #0a080b;">
+                                                                    <img src="https://mcusercontent.com/62ab5fc11c3226d9939eb036b/images/7d398fa8-461e-bcb1-9654-f24a2e15364e.jpg" alt="Destny 2 titan, warlock, and hunter posing" width="264" height="264" style="width: 100%; display: block;">
                                                                 </td>
                                                             </tr>
                                                         </table>
